#canary refactor: Добвил docker-compose, обновил структуру проекта
