# src/docs/swagger.yaml
@@ -67,6 +67,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/route_handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/route_handlers.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -102,6 +106,10 @@ paths:
             $ref: '#/definitions/route_handlers.RegisterEndpointsResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/route_handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/route_handlers.ErrorResponse'
       security:
